doc/src/content/docs/en/0.3.x/api/compute/holo/index.mdx
---
title: Holo
description: Multi-focus hologram optimization that generates multiple focal
  points simultaneously
sidebar:
  order: 10
slug: en/0.3.x/api/compute/holo
---

import Math from "@components/Math.astro";
import CodeTabs from "@components/CodeTabs.astro";
import Install from "@components/Install.astro";

Holo is a set of Pattern computations for generating multiple focal points (control points) simultaneously.
It optimizes the phase and amplitude of each transducer so that the target sound pressure is obtained at the specified multiple points.
It is provided in a package separate from [Pattern](/autd3-sdk/en/0.3.x/api/compute/pattern/).

<Install rust="autd3-rs-pattern-holo" python="autd3-pattern-holo" csharp="AUTD3.Pattern.Holo" />

The provided algorithms are as follows.

* [Naive](/autd3-sdk/en/0.3.x/api/compute/holo/naive/) — single-step back-propagation
* [GS](/autd3-sdk/en/0.3.x/api/compute/holo/gs/) — Gerchberg-Saxton method
* [GS-PAT](/autd3-sdk/en/0.3.x/api/compute/holo/gspat/) — GS-PAT method
* [Greedy](/autd3-sdk/en/0.3.x/api/compute/holo/greedy/) — combinatorial optimization that greedily determines the phase

## Common Elements

### ControlPoint

A struct representing a focal point.
It holds a position and a target amplitude.

### Amplitude units `Pa` / `kPa` / `dB`

The target amplitude `Amplitude` is constructed by multiplying an `f32` by an amplitude unit.

### EmissionConstraint

The amplitude obtained from the optimization may be an intensity that the transducer cannot output as-is.
Therefore, a constraint is specified for converting the amplitude obtained from the optimization into the transducer intensity to be output.

|                                 |                                                |
|---------------------------------|------------------------------------------------|
| `Normalize`                     | Normalizes by the maximum value                |
| `Multiply(f32)`                 | Multiplies by a coefficient after normalization and clamps |
| `Uniform(Intensity)`            | Sets all transducers to a constant intensity   |
| `Clamp(Intensity, Intensity)`   | Clamps the amplitude to the specified range     |

It is specified via the `constraint` field of each Option.
The default differs depending on the algorithm.

### Directivity

The directivity model of the transducer.
`Sphere` (omnidirectional) or the real-hardware directivity `T4010A1` can be chosen.
It is specified via the `directivity` field of each Option (the default is `Sphere`).

### TransducerMask

Selects the transducers to include in the optimization.
It is specified via the `mask` field of each Option (the default is `AllEnabled`).

* `TransducerMask::AllEnabled` — uses all transducers (default).
* `TransducerMask::Masked(&[Vec<bool>])` — specifies enabled/disabled for each transducer individually.

### LinAlgBackend (NalgebraBackend)

`naive` / `gs` / `gspat` delegate linear algebra operations to the `LinAlgBackend` trait.
`NalgebraBackend` is used as the standard implementation.
It is specified via the `backend` field of each Option (the default is `NalgebraBackend`).

`Greedy` does not use matrix operations, so it does not have a `backend` field.
